--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,5 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[[bin]]
-name = "naive_self"
-path = "src/naive_self/main.rs"
+[lib]
+
